package com.zipcodewilmington.froilansfarm;

public interface FarmVehicle {

    void operate(Farm farm);

}
