package com.zipcodewilmington.froilansfarm.Food;

import com.zipcodewilmington.froilansfarm.Interfaces.Vegetable;

public class Corn implements Vegetable {
}
