package com.zipcodewilmington.froilansfarm.Food;

import com.zipcodewilmington.froilansfarm.Interfaces.Vegetable;

public class Tomato implements Vegetable {
}
