package com.zipcodewilmington.froilansfarm;

public interface NoiseMaker {

    String makeNoise();

}
