package com.zipcodewilmington.froilansfarm;

public interface Rideable {

    void mounted();

    void dismounted();
}
