package com.zipcodewilmington.froilansfarm;

public interface Rider {

    void mount(Rideable ride);

    void dismount();

}
