package com.zipcodewilmington.froilansfarm;

public interface Vegetable extends Edible {
}
